KubernetesFiles/mysql-workbench.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-workbench
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-workbench
  template:
    metadata:
      labels:
        app: mysql-workbench
    spec:
      containers:
        - name: mysql-workbench
          image: linuxserver/mysql-workbench
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-workbench-service
  namespace: my-namespace
spec:
  selector:
    app: mysql-workbench
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
