KubernetesFiles/nodeapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      imagePullSecrets:
        - name: ecr-registry
      containers:
        - name: nodeapp
          image: 781104868468.dkr.ecr.us-east-1.amazonaws.com/myapp:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
  namespace: my-namespace
spec:
  selector:
    app: nodeapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
